--- a/0/HelloBackPandas.ipynb
+++ b/0/HelloBackPandas.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import numpy\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
-    "# Pandas!"
+    "# Hello Back Pandas!"
    ],
    "metadata": {
     "collapsed": false
@@ -22,9 +23,333 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0      [1, True, WOW]\n1     [Cham, 27, Run]\n2    [None, nan, nan]\ndtype: object"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series([[1, True, \"WOW\"], [\"Cham\", 27, \"Run\"], [None, numpy.NaN, numpy.nan]])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "DatetimeIndex(['2020-01-01', '2020-01-02', '2020-01-03'], dtype='datetime64[ns]', freq='D')"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dates = pd.date_range('20200101', periods=3)\n",
+    "dates"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                   0         1         2\n2020-01-01  0.546508  0.771123  0.207655\n2020-01-02  0.135862  0.372197  0.809854\n2020-01-03  0.747053  0.317852  0.276955",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2020-01-01</th>\n      <td>0.546508</td>\n      <td>0.771123</td>\n      <td>0.207655</td>\n    </tr>\n    <tr>\n      <th>2020-01-02</th>\n      <td>0.135862</td>\n      <td>0.372197</td>\n      <td>0.809854</td>\n    </tr>\n    <tr>\n      <th>2020-01-03</th>\n      <td>0.747053</td>\n      <td>0.317852</td>\n      <td>0.276955</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_df = pd.DataFrame(numpy.random.rand(3, 3) , index=dates)\n",
+    "my_df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                   A         B         C\n2020-01-01  0.546508  0.771123  0.207655\n2020-01-02  0.135862  0.372197  0.809854\n2020-01-03  0.747053  0.317852  0.276955",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2020-01-01</th>\n      <td>0.546508</td>\n      <td>0.771123</td>\n      <td>0.207655</td>\n    </tr>\n    <tr>\n      <th>2020-01-02</th>\n      <td>0.135862</td>\n      <td>0.372197</td>\n      <td>0.809854</td>\n    </tr>\n    <tr>\n      <th>2020-01-03</th>\n      <td>0.747053</td>\n      <td>0.317852</td>\n      <td>0.276955</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_df.columns = ['A', 'B', 'C']\n",
+    "my_df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "A    float64\nB    float64\nC    float64\ndtype: object"
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_df.dtypes"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "2020-01-01    0.771123\n2020-01-02    0.372197\n2020-01-03    0.317852\nFreq: D, Name: B, dtype: float64"
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_df['B']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<bound method NDFrame.head of                    A         B         C\n2020-01-01  0.546508  0.771123  0.207655\n2020-01-02  0.135862  0.372197  0.809854\n2020-01-03  0.747053  0.317852  0.276955>"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_df.head"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                   A         B         C\n2020-01-01  0.546508  0.771123  0.207655\n2020-01-02  0.135862  0.372197  0.809854\n2020-01-03  0.747053  0.317852  0.276955",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2020-01-01</th>\n      <td>0.546508</td>\n      <td>0.771123</td>\n      <td>0.207655</td>\n    </tr>\n    <tr>\n      <th>2020-01-02</th>\n      <td>0.135862</td>\n      <td>0.372197</td>\n      <td>0.809854</td>\n    </tr>\n    <tr>\n      <th>2020-01-03</th>\n      <td>0.747053</td>\n      <td>0.317852</td>\n      <td>0.276955</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_df.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                   A         B         C\n2020-01-01  0.546508  0.771123  0.207655\n2020-01-02  0.135862  0.372197  0.809854",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2020-01-01</th>\n      <td>0.546508</td>\n      <td>0.771123</td>\n      <td>0.207655</td>\n    </tr>\n    <tr>\n      <th>2020-01-02</th>\n      <td>0.135862</td>\n      <td>0.372197</td>\n      <td>0.809854</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_df.head(2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "              A         B         C\ncount  3.000000  3.000000  3.000000\nmean   0.476474  0.487057  0.431488\nstd    0.311556  0.247504  0.329502\nmin    0.135862  0.317852  0.207655\n25%    0.341185  0.345024  0.242305\n50%    0.546508  0.372197  0.276955\n75%    0.646780  0.571660  0.543405\nmax    0.747053  0.771123  0.809854",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>3.000000</td>\n      <td>3.000000</td>\n      <td>3.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>0.476474</td>\n      <td>0.487057</td>\n      <td>0.431488</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>0.311556</td>\n      <td>0.247504</td>\n      <td>0.329502</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.135862</td>\n      <td>0.317852</td>\n      <td>0.207655</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>0.341185</td>\n      <td>0.345024</td>\n      <td>0.242305</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>0.546508</td>\n      <td>0.372197</td>\n      <td>0.276955</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>0.646780</td>\n      <td>0.571660</td>\n      <td>0.543405</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>0.747053</td>\n      <td>0.771123</td>\n      <td>0.809854</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_df.describe()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "outputs": [],
    "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                   A         B         C\n2020-01-02  0.135862  0.372197  0.809854",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2020-01-02</th>\n      <td>0.135862</td>\n      <td>0.372197</td>\n      <td>0.809854</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_df[1:2]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   2020-01-01  2020-01-02  2020-01-03\nA    0.546508    0.135862    0.747053\nB    0.771123    0.372197    0.317852\nC    0.207655    0.809854    0.276955",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>2020-01-01</th>\n      <th>2020-01-02</th>\n      <th>2020-01-03</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>A</th>\n      <td>0.546508</td>\n      <td>0.135862</td>\n      <td>0.747053</td>\n    </tr>\n    <tr>\n      <th>B</th>\n      <td>0.771123</td>\n      <td>0.372197</td>\n      <td>0.317852</td>\n    </tr>\n    <tr>\n      <th>C</th>\n      <td>0.207655</td>\n      <td>0.809854</td>\n      <td>0.276955</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_df.T"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                   A         B         C\n2020-01-02  0.135862  0.372197  0.809854",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2020-01-02</th>\n      <td>0.135862</td>\n      <td>0.372197</td>\n      <td>0.809854</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_df[my_df['A'] < 0.2]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "outputs": [],
+   "source": [
+    "my_df.to_excel('hello_df.xlsx')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
