--- a/1-Regression/2-MultipleLinearRegression.ipynb
+++ b/1-Regression/2-MultipleLinearRegression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "import pandas\r\n",
     "from sklearn.tree import DecisionTreeClassifier\r\n",
@@ -29,13 +29,16 @@
     "\r\n",
     "cdf = df[['ENGINESIZE','CYLINDERS','FUELCONSUMPTION_COMB','CO2EMISSIONS']]\r\n",
     "\r\n",
+    "msk = np.random.rand(len(df)) < 0.8\r\n",
+    "train = cdf[msk]\r\n",
+    "test = cdf[~msk]\r\n",
     "\r\n",
-    "x = np.asanyarray()\r\n",
-    "regr = linear_model.LinearRegression()\r\n",
-    "train_x = np.asanyarray(train[['ENGINESIZE']])\r\n",
-    "train_y = np.asanyarray(train[['CO2EMISSIONS']])\r\n",
-    "regr.fit (train_x, train_y)\r\n",
+    "X = np.asanyarray(train[['ENGINESIZE','CYLINDERS','FUELCONSUMPTION_COMB']])\r\n",
+    "y = np.asanyarray(train[['CO2EMISSIONS']])\r\n",
     "\r\n",
+    "model.fit(X, y)\r\n",
+    "\r\n",
+    "print('Variance score: %.2f' % regr.score(x, y))\r\n",
     "\r\n",
     "\r\n",
     "average = 0\r\n",
