China GPD completed :D

--- a/1-Regression/4-NonLinearPlots.ipynb
+++ b/1-Regression/4-NonLinearPlots.ipynb
@@ -186,12 +186,12 @@
     "X = np.arange(-5.0, 5.0, 0.1)\r\n",
     "\r\n",
     "\r\n",
-    "Y = 1-4/(1+np.power(3, X-2))\r\n",
+    "Y = 1 - 4 / (1 + np.power(3, X - 2))\r\n",
     "\r\n",
-    "plt.plot(X,Y) \r\n",
+    "plt.plot(X, Y)\r\n",
     "plt.ylabel('Dependent Variable')\r\n",
     "plt.xlabel('Independent Variable')\r\n",
-    "plt.show()"
+    "plt.show()\r\n"
    ],
    "outputs": [
     {
