Working on Saeed's Practive...

--- a/1-Regression/5-ChinaGDT.ipynb
+++ b/1-Regression/5-ChinaGDT.ipynb
@@ -810,9 +810,26 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Saeed Aghabozorgi Pracrive!\r\n",
+    "\r\n",
+    "Can you calculate what is the accuracy of our model?\r\n"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "from sklearn.metrics import r2_score\r\n",
+    "\r\n",
+    "result = model.predict(test_x_poly)\r\n",
+    "\r\n",
+    "print(\"Mean absolute error: %.2f\" % np.mean(np.absolute(test_y_ - y_test)))\r\n",
+    "print(\"Residual sum of squares (MSE): %.2f\" % np.mean((test_y_ - y_test) ** 2))\r\n",
+    "print(\"R2-score: %.2f\" % r2_score(y_test,test_y_ ) )\r\n"
+   ],
    "outputs": [],
    "metadata": {}
   }
