My beta1,2 scored 0.99 D:

--- a/1-Regression/5-ChinaGDT.ipynb
+++ b/1-Regression/5-ChinaGDT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "source": [
     "import numpy as np\r\n",
     "import pandas as pd\r\n",
@@ -109,14 +109,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 97
+     "execution_count": 2
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 3,
    "source": [
     "plt.figure(figsize=(9, 6))\r\n",
     "\r\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "source": [
     "X = np.arange(-5.0, 5.0, 0.1)\r\n",
     "Y = 1.0 / (1.0 + np.exp(-X))\r\n",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 5,
    "source": [
     "def sigmoid(x, Beta_1, Beta_2):\r\n",
     "     y = 1 / (1 + np.exp(-Beta_1*(x-Beta_2)))\r\n",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 6,
    "source": [
     "# Wrong!\r\n",
     "\r\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 7,
    "source": [
     "# Normalizing our dara :D\r\n",
     "\r\n",
@@ -233,28 +233,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 10,
    "source": [
+    "from sklearn.metrics import r2_score\r\n",
+    "\r\n",
+    "\r\n",
     "\r\n",
     "beta_1 = 0.27\r\n",
     "beta_2 = 2011\r\n",
-    "Y_pred = sigmoid(x_data, beta_1 , beta_2)\r\n",
+    "Y_pred = sigmoid(x_data, beta_1 , beta_2)*15000000000000.\r\n",
     "\r\n",
-    "plt.plot(x_data, Y_pred*15000000000000.)\r\n",
+    "\r\n",
+    "\r\n",
+    "print(\"Mean absolute error: %.2f\" % np.mean(np.absolute(Y_pred - y_data)))\r\n",
+    "print(\"Residual sum of squares (MSE): %.2f\" % np.mean((Y_pred - y_data) ** 2))\r\n",
+    "print(\"R2-score: %.2f\" % r2_score(y_data, Y_pred))\r\n",
+    "\r\n",
+    "plt.plot(x_data, Y_pred)\r\n",
     "plt.plot(x_data, y_data, 'ro')\r\n",
     "\r\n",
     "plt.plot(2015, sigmoid(2015, beta_1 , beta_2)*15000000000000, 'bo')"
    ],
    "outputs": [
     {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Mean absolute error: 221648835814.28\n",
+      "Residual sum of squares (MSE): 76891752616254412685312.00\n",
+      "R2-score: 0.99\n"
+     ]
+    },
+    {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x193ae789160>]"
+       "[<matplotlib.lines.Line2D at 0x1f4e4dd8490>]"
       ]
      },
      "metadata": {},
-     "execution_count": 105
+     "execution_count": 10
     },
     {
      "output_type": "display_data",
@@ -273,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "source": [
     "from scipy.optimize import curve_fit\r\n",
     "\r\n",
@@ -294,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "source": [
     "plt.figure(figsize=(8,5))\r\n",
     "beta_1 = popt[0]\r\n",
@@ -336,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "source": [
     "x = np.linspace(1960, 2015, 55)\r\n",
     "x = x/max(x)\r\n",
@@ -376,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "source": [
     "gpf_2015 = (sigmoid(2015/2014, *popt)) * max(y_data)\r\n",
     "\r\n",
@@ -395,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "source": [
     "plt.plot(x_data, n_y_data, 'ro')\r\n",
     "\r\n",
@@ -452,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "source": [
     "from sklearn.metrics import accuracy_score\r\n",
     "result = sigmoid(n_x_data, beta_1 , beta_2)\r\n",
@@ -547,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "source": [
     "from sklearn.metrics import r2_score\r\n",
     "\r\n",
